@@ -1,7 +1,6 @@
 apply plugin : 'java'
 apply plugin : 'eclipse'
 apply plugin : 'application'
-apply plugin: "jacoco"
 
 mainClassName="com.njd5475.github.slim.view.SlimIDE"
 sourceCompatibility = 1.8
@@ -12,19 +11,23 @@ repositories {
 }
 
 dependencies {
-  compile 'com.eclipsesource.minimal-json:minimal-json:0.9.4'
-  testCompile group: 'org.mockito', name: 'mockito-all', version: '1.8.4'
-  testCompile group: 'junit', name: 'junit', version: '4.+'
+  implementation 'com.eclipsesource.minimal-json:minimal-json:0.9.4'
+  testImplementation group: 'org.mockito', name: 'mockito-all', version: '1.8.4'
+  testImplementation group: 'junit', name: 'junit', version: '4.+'
 }
 
+test {
+     jvmArgs '--add-opens', 'java.base/java.lang=ALL-UNNAMED'
+ }
+
 jar {
-  baseName = "slim-ide"
-  version = '0.0.1'
+  archiveBaseName = "slim-ide"
+  archiveVersion = '0.0.1'
   manifest {
   	attributes 'Main-Class': "$mainClassName"
   }
   from {
-    configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
+    configurations.compileClasspath.collect { it.isDirectory() ? it : zipTree(it) }
   }
 }
 
